--- a/src/app/navigation/top-nav-bar-component/top-nav-bar-component.component.html
+++ b/src/app/navigation/top-nav-bar-component/top-nav-bar-component.component.html
@@ -173,7 +173,7 @@
               <a class="choice dropdown-item" href="#">Coupons</a>
               <a class="choice dropdown-item" href="#">Saved Cards</a>
               <a class="choice dropdown-item" href="#">Saved VPA</a>
-              <a class="header dropdown-item" href="#">Saved Addresses</a>
+              <a class="choice dropdown-item" href="#">Saved Addresses</a>
           </div>
         </div>
           <!-- <button class="btn btn-outline-success" type="submit">Wishlist</button>
