--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-top-nav-bar-component> loading... </app-top-nav-bar-component>
+<app-carousel>loading..</app-carousel> 
+<body><h1><span style="font-size: 30px; text-indent: 30px;">DEAL OF THE DAY</span></h1></body>
+<app-cards>loading..</app-cards>
 <app-footer-component>loading..</app-footer-component>
