--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,18 @@
 <app-carousel>loading..</app-carousel> 
 <body><h1><span style="font-size: 30px; text-indent: 30px;">DEAL OF THE DAY</span></h1></body>
 <app-cards>loading..</app-cards>
+<div class = "container-fluid d-flex">
+    <div *ngFor="let item of products">
+        <app-lab3-shopping-cards imgDescription="Item 1" description={{item.description}} img={{item.img}} [brand]='item.brand' 
+        [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
+    </div>
+
+<app-lab3-shopping-cards imgDescription="Item 1" description="Mens Athletic Pants" img=".\assets\pants4.webp" brand="Gucci" 
+[currprice]=100 [oldprice]=500 [discount]=80></app-lab3-shopping-cards>
+<app-lab3-shopping-cards imgDescription="Item 2" description="Mens Sweatpants" img=".\assets\pants5.webp" brand="Louise Baton" 
+[currprice]=1080 [oldprice]=1200 [discount]=10></app-lab3-shopping-cards>
+<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\pants6.webp" brand="Yaaaa Baby Co." 
+[currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
+</div>
+<app-lab3-shopping-cards>loading..</app-lab3-shopping-cards>
 <app-footer-component>loading..</app-footer-component>
