Lab 4 (not Finished)
Routing was implemented

--- a/src/app/navigation/cards/cards.component.html
+++ b/src/app/navigation/cards/cards.component.html
@@ -1,26 +1,46 @@
-<div class="row justify-content-start">
+<div class="row justify-content-start" style="margin-top: 50px">
     <div type="button" style="width: 11.85rem;">
-        <img src=".\assets\card1row1.webp" style="width: 189.9px; height: 285.63" alt="...">
+        <a href="KurtasLayout">
+        <img src=".\assets\card1row1.webp"  style="width: 189.9px; height: 285.63" alt="..." >
+    </a>
+        <!--<a href="ShoppingLayout" class="btn btn-primary">Go somewhere</a>
+        
+            <a href="ShoppingLayout" class="btn btn-primary">Go somewhere</a>
+        -->
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="DressesLayout">
         <img src=".\assets\card2row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="WorkReadyShoesLayout">
         <img src=".\assets\card3row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="CasualShoesLayout">
         <img src=".\assets\card4row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="FlatsAndHeels">
         <img src=".\assets\card5row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="KurtasLayout">
         <img src=".\assets\card6row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="KurtasLayout">
         <img src=".\assets\card7row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
     <div  type="button" style="width: 11.85rem;">
+        <a href="KurtasLayout">
         <img src=".\assets\card8row1.webp"  style="width: 189.9px; height: 285.63" alt="...">
+    </a>
     </div>
 </div>
