--- a/src/app/Layouts/casual-shoes-flipflops-layout/casual-shoes-flipflops-layout.component.html
+++ b/src/app/Layouts/casual-shoes-flipflops-layout/casual-shoes-flipflops-layout.component.html
@@ -4,15 +4,15 @@
         [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
     </div>
 
-<app-lab3-shopping-cards imgDescription="Item 1" description="Mens Athletic Pants" img=".\assets\casualshoes1.webp" brand="Gucci" 
+<app-lab3-shopping-cards imgDescription="Item 1" description="Crocs" img=".\assets\casualshoes1.webp" brand="Crocs" 
 [currprice]=100 [oldprice]=500 [discount]=80></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 2" description="Mens Sweatpants" img=".\assets\casualshoes2.webp" brand="Louise Baton" 
+<app-lab3-shopping-cards imgDescription="Item 2" description="FlipFlops" img=".\assets\casualshoes2.webp" brand="Pumas" 
 [currprice]=1080 [oldprice]=1200 [discount]=10></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\casualshoes3.webp" brand="Yaaaa Baby Co." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="White Van's" img=".\assets\casualshoes3.webp" brand="Pineapple" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\casualshoes4.webp" brand="Monsters Inc." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="White Van's" img=".\assets\casualshoes4.webp" brand="Menard's" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\casualshoes5.webp" brand="Bass Pro Shop" 
+<app-lab3-shopping-cards imgDescription="Item 3" description="White Van's" img=".\assets\casualshoes5.webp" brand="Lowes" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
 
 </div>
