--- a/src/app/Layouts/flats-and-heels/flats-and-heels.component.html
+++ b/src/app/Layouts/flats-and-heels/flats-and-heels.component.html
@@ -4,15 +4,15 @@
         [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
     </div>
 
-<app-lab3-shopping-cards imgDescription="Item 1" description="Mens Athletic Pants" img=".\assets\flats1.webp" brand="Gucci" 
+<app-lab3-shopping-cards imgDescription="Item 1" description="Heels" img=".\assets\flats1.webp" brand="Steve Madden" 
 [currprice]=100 [oldprice]=500 [discount]=80></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 2" description="Mens Sweatpants" img=".\assets\flats2.webp" brand="Louise Baton" 
+<app-lab3-shopping-cards imgDescription="Item 2" description="Black Heels" img=".\assets\flats2.webp" brand="PetCo" 
 [currprice]=1080 [oldprice]=1200 [discount]=10></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\flats3.webp" brand="Yaaaa Baby Co." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Mochissons" img=".\assets\flats3.webp" brand="Pearl's Tampax" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\flats4.webp" brand="Monsters Inc." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Flat shoes" img=".\assets\flats4.webp" brand="McDonalds" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\flats5.webp" brand="Bass Pro Shop" 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Burkeinstocks" img=".\assets\flats5.webp" brand="TutiFruti" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
 
 </div>
