--- a/src/app/Layouts/work-ready-shoes-layout/work-ready-shoes-layout.component.html
+++ b/src/app/Layouts/work-ready-shoes-layout/work-ready-shoes-layout.component.html
@@ -4,15 +4,15 @@
         [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
     </div>
 
-<app-lab3-shopping-cards imgDescription="Item 1" description="Mens Athletic Pants" img=".\assets\workshoes1.webp" brand="Gucci" 
+<app-lab3-shopping-cards imgDescription="Item 1" description="Black Shoes" img=".\assets\workshoes1.webp" brand="Little Ceasers" 
 [currprice]=100 [oldprice]=500 [discount]=80></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 2" description="Mens Sweatpants" img=".\assets\workshoes2.webp" brand="Louise Baton" 
+<app-lab3-shopping-cards imgDescription="Item 2" description="Maroon High Heels" img=".\assets\workshoes2.webp" brand="McDonalds" 
 [currprice]=1080 [oldprice]=1200 [discount]=10></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\workshoes3.webp" brand="Yaaaa Baby Co." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Black High Heels" img=".\assets\workshoes3.webp" brand="Cave" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\workshoes4.webp" brand="Monsters Inc." 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Black Low Heels" img=".\assets\workshoes4.webp" brand="Cave 2" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
-<app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\workshoes5.webp" brand="Bass Pro Shop" 
+<app-lab3-shopping-cards imgDescription="Item 3" description="Black Dress Heels" img=".\assets\workshoes5.webp" brand="Patagonia Cave" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
 
 </div>
