--- a/src/app/navigation/top-nav-bar-component/top-nav-bar-component.component.html
+++ b/src/app/navigation/top-nav-bar-component/top-nav-bar-component.component.html
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="margin: 10px;">
     <div class="container-fluid">
       <div class="LOGOcon container" style="width: 150px;">
-        <div id="banner"><img src="../assets/myntra-logo-m-png-3.png" class="logo" style="width: 100%"></div>
+        <div id="banner" type="button">
+          <a href="#">
+          <img src="../assets/myntra-logo-m-png-3.png" class="logo" style="width: 100%">
+          </a>
+        </div>
+          
       </div>
       
       
