--- a/src/app/Layouts/dresses/dresses.component.html
+++ b/src/app/Layouts/dresses/dresses.component.html
@@ -4,7 +4,7 @@
         [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
     </div>
 
-<app-lab3-shopping-cards imgDescription="Item 1" description="Fancy Dress" img=".\assets\dresses1.webp" brand="Ur Moms House" 
+<app-lab3-shopping-cards imgDescription="Item 1" description="Fancy Dress" img=".\assets\dresses1.webp" brand="Spencer's" 
 [currprice]=100 [oldprice]=500 [discount]=80></app-lab3-shopping-cards>
 <app-lab3-shopping-cards imgDescription="Item 2" description="Less Fancy Dress" img=".\assets\dresses2.webp" brand="Versace" 
 [currprice]=1080 [oldprice]=1200 [discount]=10></app-lab3-shopping-cards>
