--- a/src/app/Layouts/kurtas-layout/kurtas-layout.component.html
+++ b/src/app/Layouts/kurtas-layout/kurtas-layout.component.html
@@ -1,4 +1,128 @@
-<div class = "container-fluid d-flex">
+<!-- Button trigger modal -->
+<button type="button" class="btn" style="background-color: darkslategray;color:white; border-radius: 0%; width: 300px; height: 40px"
+ data-bs-toggle="modal" data-bs-target="#exampleModal">
+  FLAT 400 OFF
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Avial Flat</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Coupon Code: MYNTRA400
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn" style="width:100px; font-size: 14px;" data-bs-dismiss="modal">Genuine Products</button>
+        <button type="button" class="btn" style=" font-size: 14px;"data-bs-dismiss="modal">Try and Buy</button>
+        <button type="button" class="btn" style=" font-size: 14px;">Easy Exchange and Returns</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row justify-content-start">
+<ul class="nav flex-column" style="width:252px">
+    <p style="margin-left: 20px; margin-top: 20px"><strong>FILTERS</strong></p>
+    <hr class="hr-black" />
+    <p style="margin-left: 20px"><strong>CATEGORIES</strong></p>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Kurtas 
+        <span style="font-size: 11px;color:gray">(800)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="#" style="font-size: 13px;color:black">Kurta Sets
+        <span style="font-size: 11px;color:gray">(800)</span></a>
+    </li>
+    <hr class="hr-black" />
+    <p style="margin-left: 20px"><strong>BRAND</strong></p>
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="#" style="font-size: 13px;color:black">Jack Daniels
+        <span style="font-size: 11px;color:gray">(800)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Polo 
+        <span style="font-size: 11px;color:gray">(1300)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Jimmie Johns 
+        <span style="font-size: 11px;color:gray">(400)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Lowes
+        <span style="font-size: 11px;color:gray">(30)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Tractor Supply 
+        <span style="font-size: 11px;color:gray">(3)</span></a>
+    </li>
+    <hr class="hr-black" />
+    <p style="margin-left: 20px"><strong>PRICE</strong></p>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Rs. 124 to Rs. 3793 
+        <span style="font-size: 11px;color:gray">(800)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Rs. 3793 to Rs. 7462  
+        <span style="font-size: 11px;color:gray">(400)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Rs. 7462 to Rs. 11131  
+        <span style="font-size: 11px;color:gray">(33)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Rs. 11131 to Rs. 14800  
+        <span style="font-size: 11px;color:gray">(0)</span></a>
+    </li>
+    <hr class="hr-black" />
+    <p style="margin-left: 20px"><strong>COLOR</strong></p>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Red  
+        <span style="font-size: 11px;color:gray">(156)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Black  
+        <span style="font-size: 11px;color:gray">(260)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">Blue  
+        <span style="font-size: 11px;color:gray">(345)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">White  
+        <span style="font-size: 11px;color:gray">(500)</span></a>
+    </li>
+    <hr class="hr-black" />
+    <p style="margin-left: 20px"><strong>DISCOUNT RANGES</strong></p>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">10% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">20% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">30% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">40% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">50% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">60% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">70% and above</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#" style="font-size: 13px;color:black">80% and above</a>
+    </li>
+
+  </ul>
+<div class = "container-fluid d-flex" style="width:1267px">
     <div *ngFor="let item of products">
         <app-lab3-shopping-cards imgDescription="Item 1" description={{item.description}} img={{item.img}} [brand]='item.brand' 
         [currprice]='item.currprice' [oldprice]='item.oldprice' [discount]='item.discount'></app-lab3-shopping-cards>
@@ -15,5 +139,6 @@
 <app-lab3-shopping-cards imgDescription="Item 3" description="Mens Gym Shorts" img=".\assets\kurta5.webp" brand="Bass Pro Shop" 
 [currprice]=475 [oldprice]=1900 [discount]=75></app-lab3-shopping-cards>
 
+</div>
 </div>
 <app-lab3-shopping-cards>loading..</app-lab3-shopping-cards>
