--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-user-info> loading.. </app-user-info>
 <app-top-nav-bar-component> loading... </app-top-nav-bar-component>
 
 <router-outlet></router-outlet>
